- add spacings - add breakpoint wireframes - fix logo width

--- a/_assets/css/_modules/logo.css
+++ b/_assets/css/_modules/logo.css
@@ -28,7 +28,7 @@
   stroke: var(--c-white);
 }
 
-.section--logo.waypoint {
+.section--logo {
   display: flex;
   flex-direction: column;
   justify-content: center;
